--- a/assets/styles/utility.css
+++ b/assets/styles/utility.css
@@ -31,6 +31,9 @@
 .justify-evenly{
     justify-content: space-evenly;
 }
+.align-end{
+    text-align: end;
+}
 .align-center{
     align-items: center;
 }
@@ -60,6 +63,15 @@
 .mr{
     margin-right: 70px;
 }
+.mr-2{
+    margin-right: 40px;
+}
+.ml{
+    margin-left: 70px;
+}
+.ml-2{
+    margin-left: 230px ;
+}
 .m-1{
     margin: 5px;
 }
@@ -86,6 +98,9 @@
 }
 .mt-5{
     margin-top: 60px;
+}
+.mt-6{
+    margin-top: 80px;
 }
 
 /* margin classes end */
